# zhmiscellanyocr

./: MANIFEST.in  README.md  setup.cfg
src/zhmiscellany_ocr.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/zhmiscellanyocr/: __init__.py  _ocr_supportfuncs.py  _resource_files_lookup.py
