[metadata]
name = zhmiscellanyocr
version = 0.1.4
author = zh
author_email = imnotgivingmyemailjustaddmeondiscordmydiscordisz_h_@zh.com
description = A collection of OCR (image text recognition) python functions made by zh.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://discord.gg/ThBBAuueVJ
project_urls =
    Bug Tracker = https://github.com/zen-ham/zhmiscellanyocr/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: Microsoft :: Windows

[options]
install_requires =
    pytesseract>=0
    zhmiscellany>=0

package_dir =
    = src
packages = find:
python_requires = >=3.6
include_package_data = True

[options.packages.find]
where = src